fix: 🐛 Various alignment and layout fixes
Various fixes to character sheets, item sheets and the like.

Also a fix to the calendar-weather check,
which should return early if calendar weather isn't installed and the user has been informed of the integration.

--- a/src/styles/components/_editor-override.scss
+++ b/src/styles/components/_editor-override.scss
@@ -1,6 +1,7 @@
 @use "utils";
 
-.app.sheet {
+.app.journal-sheet,
+.app.sheet.actor {
 	form {
 		display: flex;
 		flex-direction: column;
@@ -104,8 +105,11 @@
 				box-shadow: none;
 			}
 		}
-		& > button[type="submit"] {
-			display: none;
-		}
+	}
+}
+
+.app.journal-sheet form {
+	& > button[type="submit"] {
+		display: none;
 	}
 }
