--- a/src/styles/sheets/_monster.scss
+++ b/src/styles/sheets/_monster.scss
@@ -3,11 +3,13 @@
 	flex-direction: column;
 	height: 100%;
 	width: 100%;
-}
-
-.forbidden-lands .monster .bio input {
-	flex-grow: 1;
-	margin: 0 8px;
+	.bio {
+		padding: 8px;
+		input {
+			flex-grow: 1;
+			margin: 0 8px;
+		}
+	}
 }
 
 .forbidden-lands .monster .bio .bio-row {
@@ -34,11 +36,13 @@
 	height: 95px;
 	margin-right: 8px;
 	width: 95px;
+	padding: 0 0.25em;
 }
 
 .forbidden-lands .monster .bio .avatar img {
 	border: 0 none;
 	display: block;
+
 	max-width: 95px;
 	max-height: 95px;
 	min-width: 20px;
@@ -47,7 +51,7 @@
 	margin-left: 5px;
 }
 .forbidden-lands .monster .bio .avatar img:hover {
-	box-shadow: 0 0 10px red;
+	box-shadow: 0 0 10px #a00;
 	cursor: pointer;
 }
 
